# LuaBagOfTricks

./: .gitignore  Class.lua  Dict.lua  Dictionary.lua  Interop.md  LICENSE  List.lua  README.md  Tableex.lua  class.lua  classx.lua  debugex.lua  debugger.lua  debugger2.lua  dev.lua  errors.lua  gen_interop.lua  interop.lua  interop_c.lua  interop_ch.lua  interop_cpp.lua  interop_cppcli.lua  interop_cs.lua  interop_csh.lua  interop_md.lua  interop_net.lua  interop_spec.lua  lab.lua  lbot.lua  lbot_dict.lua  lbot_list.lua  lbot_table.lua  lbot_types.lua  lbot_utils.lua  logger.lua  pnut.lua  pnut_runner.lua  process_interop.lua  process_interop_all.lua  run.lua  (+7 more)
Test/: gen_interop.cmd  go.cmd  interop_spec.lua  mixed_data.txt  run.cmd  run_test.cmd  test.cmd  test_class.lua  test_interop.lua  test_pnut.lua  test_utils.lua
Test/Files/: interop_input1.txt  interop_test_spec.lua
Test/c_test/: build.cmd  luaex.c  luaex.h
Test/ch_test/: CMakeLists.txt  build.cmd  gen_interop.cmd  interop.c  interop.h  interop_spec_ch.lua  luaex.c  luaex.h  luainterop.c  luainterop.h  luainterop_work.c  luainterop_work.h  luainteropwork.c  luainteropwork.h  main.c
Test/cs_test/: GenLib.cs  GenLibInterop.cs  LuaInterop.cs  LuaInteropWork.cs  gen_interop.cmd  interop_spec_cs.lua
Test/files/: numerical_data.txt
Test1/: test_pnut.lua
Test1/ch_test/: CMakeLists.txt  another.h  luainterop.c  luainteropwork.h
c/: diag.c  diag.h  logger.c  logger.h  luaex.c  luaex.h
c/private/: diag.c  logger.c  luaex.c
c_test/: interop.c  interop.h  luaex.c  luaex.h  main.c
csrc/: cliex.cpp  cliex.h  luaex.c  luaex.h
files/: interop_min.c  interop_min.cs  interop_min.h  interop_template.c  interop_template.cs  interop_template.h
internal/: InteropCore.cpp  InteropCore.h  luaex.c  luaex.h
lua/: debugger.lua  template.lua
source/: luautils.c  luautils.h
source_code/: luaex.c  luaex.h  luautils.c  luautils.h
test/: debugex_client.py  go.cmd  other_module.lua  run_test.cmd  test.cmd  test_class.lua  test_debugex.lua  test_debugger.lua  test_dictionary.lua  test_list.lua  test_pnut.lua  test_stringex.lua  test_tableex.lua  test_types.lua  test_utils.lua
test/ch_test/: CMakeLists.txt  gen_interop.cmd
test/cs_test/: LuaInterop.cs  cs_test.csproj  cs_test.sln  gen_interop.cmd
test_ch/: Lbot.cpp  Lbot.sln  Lbot.vcxproj  Lbot.vcxproj.filters  gen_interop.cmd  interop_spec_ch.lua  luainterop.c  luainterop.h  pnut.cpp  pnut.h  script_main.lua  test_ch.cpp  test_ch.sln  test_ch.vcxproj  test_ch.vcxproj.filters  test_interop.cpp  test_luautils.cpp
test_code/test_code_ch/: CMakeLists.txt  Lbot.cpp  Lbot.sln  Lbot.vcxproj  Lbot.vcxproj.filters  gen_interop.cmd  interop_spec_ch.lua  luainterop.c  luainterop.h  luainteropwork.c  main.c  script6.lua  script7.lua  test_interop.cpp  test_luautils.cpp
test_code/test_code_ch/mingw/: CMakeLists.txt  main.c
test_code/test_code_ch/vs/: Lbot.cpp  Lbot.vcxproj  Lbot.vcxproj.filters  script7.lua
test_code/test_code_cs/: gen_interop.cmd
test_code/test_code_lua/: run_test.cmd  test_class.lua  test_pnut.lua  test_stringex.lua  test_utils.lua
test_cs/: LuaInterop.cs  LuaInteropWork.cs  Program.cs  cs_test.sln  gen_interop.cmd  interop_spec_cs.lua  test_cs.csproj  test_cs.sln
test_lua/: run_test.cmd  test_pnut.lua  test_utils.lua
